<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alwaysDrawnWithCache="false"
    android:animateLayoutChanges="false"
    android:animationCache="false"
    android:fadeScrollbars="false"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/song"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />


    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/song"
        android:layout_marginTop="5dp"
        android:text="@string/artist"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/playbutton"
        android:src="@android:drawable/ic_media_play" />


</RelativeLayout>

